syntax = "proto3";

message Coordinates {
    int32 row = 1;  
    int32 col = 2;
}

message CoordinatesGroup {
    repeated Coordinates points = 1; 
}

message MeasureOneDRequest {
    string in_img_path = 1;   
    bool process_all_flag = 2;      
    repeated string in_img_list = 3;   
    string out_img_path = 4;             
    bool is_preview_flag = 5; 
    CoordinatesGroup in_ref_dual_pt_rc_list = 6;
    CoordinatesGroup in_calc_dual_pt_rc_list = 7;
    int32 in_ref_val = 8;

    // Newly added fields
    int32 par_st_row = 9;
    int32 par_en_row = 10;
    int32 par_st_col = 11;
    int32 par_en_col = 12;
    bool par_process_flag = 13;
}

message MeasureTwoDRequest {
    string in_img_path = 1;   
    bool process_all_flag = 2;      
    repeated string in_img_list = 3;   
    string out_img_path = 4;             
    bool is_preview_flag = 5; 
    CoordinatesGroup in_ref_dual_pt_rc_list = 6;
    CoordinatesGroup in_calc_dual_pt_rc_list = 7;
    repeated int32 in_ref_val_list = 8;

    // Newly added fields
    int32 par_st_row = 9;
    int32 par_en_row = 10;
    int32 par_st_col = 11;
    int32 par_en_col = 12;
    bool par_process_flag = 13;
}

message MeasureThreeDRequest {
    string in_img_path = 1;   
    bool process_all_flag = 2;      
    repeated string in_img_list = 3;   
    string out_img_path = 4;             
    bool is_preview_flag = 5; 
    repeated CoordinatesGroup in_ref_line_rc_list = 6;
    CoordinatesGroup in_calc_line_rc = 7;
    repeated int32 in_ref_base_ht_mesr_list = 8;

    // Newly added fields
    int32 par_st_row = 9;
    int32 par_en_row = 10;
    int32 par_st_col = 11;
    int32 par_en_col = 12;
    bool par_process_flag = 13;
}

message MeasureResponse {
    string job_id = 1;
    double percentage = 2;
    string input_image_path = 3;
    string output_image_path = 4;
    int64 total_input_images = 5;
    int64 processed_image_count = 6;
    string status_message = 7;
    bool completed = 8;
    string error_message = 9;
    string process_type = 10;
    int32 status_code = 11;
    float object_length = 12;

    // Newly added fields
    int32 par_st_row = 13;
    int32 par_en_row = 14;
    int32 par_st_col = 15;
    int32 par_en_col = 16;
    bool par_process_flag = 17;
}
